--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,10 @@
     -->
 
     <title>BRILIST APP</title>
-    <!-- <script
-      type="text/javascript"
-      src="https://mdm.brilife.co.id/javascripts/api/tableau-2.min.js"
-    ></script> -->
     <script
-      type="text/javascript"
-      src="http://10.28.2.95/javascripts/api/viz_v1.js"
-    >
-      //
-    </script>
+      type="text/JavaScript"
+      src="https://mdm.brilife.co.id/javascripts/api/tableau-2.3.0.min.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
